@@ -6,6 +6,8 @@ with respect to new features and compatibility changes.
 
 2020-08-21
  * Added toggle switch component to wing.vue.js.
+ * JSON fields now assume a non JSON string is a single element array as it's more useful than assuming it's an error.
+ * Field validation now allows for an array reference as a valid value for enumeration comparisons.
 
 2020-08-19
  * Added wing.format_field_label() for generating make shift field labels on the fly.
